--- a/2day/html/jquery01.html
+++ b/2day/html/jquery01.html
@@ -32,15 +32,20 @@
         .black {
             background-color: black;
         }
+
+        .green.modify {
+            width: 200;
+            height: 300;
+            background-color: blueviolet;
+        }
     </style>
 </head>
 
 <body>
-    <div class="box red"></div>
+    <div class="box red" id="red"></div>
     <div class="box green"></div>
     <div class="box blue"></div>
     <div class="box black"></div>
-    <script src="../js/main.js"></script>
     <!--이래야 적용됨 그러나 너무 가독성이 떨어짐, 그래서 나온게 이벤트 main.js로~-->
 </body>
 
