css파일이 너무 어렵다

--- a/2day/html/jquery01.html
+++ b/2day/html/jquery01.html
@@ -38,6 +38,8 @@
             height: 300;
             background-color: blueviolet;
         }
+
+        /*addclass를 하면 이게 포함된다.*/
     </style>
 </head>
 
