--- a/2day/hitop/html/index.html
+++ b/2day/hitop/html/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/swiper.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/layout_fulldown.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/splitting.css">
     <script src="../js/jquery-3.3.1.min.js"></script>
@@ -22,6 +23,7 @@
     <script src="../js/splitting.js"></script>
     <script src="../js/greensock/gsap.min.js"></script>
     <script src="../js/main.js" defer></script>
+
 
 </head>
 
