--- a/3day/hublot/html/index.html
+++ b/3day/hublot/html/index.html
@@ -26,7 +26,7 @@
     <script defer src="../js/main.js"></script>
 </head>
 
-<body>
+<body id="my_body">
     <h1>
         <img src="../images/clock/logo.png" alt="">
     </h1>
