--- a/4day/hitop/html/index.html
+++ b/4day/hitop/html/index.html
@@ -20,6 +20,7 @@
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/swiper.min.js"></script>
     <script src="../js/js.cookie.min.js"></script>
+    <!--쿠키-->
     <script src="../js/splitting.js"></script>
     <script src="../js/greensock/gsap.min.js"></script>
     <script src="../js/main.js" defer></script>
@@ -441,20 +442,111 @@
         <div class="titleBox">
             <h2>오시는 길</h2>
         </div>
-        <div id="map" style="width:100%;height:500px;"></div>
+        <div id="my_map" style="width:100%;height:500px;"></div>
+        <script type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29dccbd2b5216f17cc2f3c21fc0cc981&libraries=services">//원래는 자바스크립트키로 한다는데 나는 REST API 키 로 된다.</script>
+        <script>
+            var container = document.getElementById('my_map'); //지도를 담을 영역의 DOM 레퍼런스
+            var options = { //지도를 생성할 때 필요한 기본 옵션
+                center: new kakao.maps.LatLng(37.54699, 127.09598), //지도의 중심좌표.
+                level: 3 //지도의 레벨(확대, 축소 정도)
+            };
+
+            var map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+
+
+
+
+            // 주소-좌표 변환 객체를 생성합니다
+            var geocoder = new kakao.maps.services.Geocoder();
+
+            // 주소로 좌표를 검색합니다
+            geocoder.addressSearch('서울 영등포구 선유로 130 에이스 하이테크시티3', function (result, status) {
+
+
+                // 정상적으로 검색이 완료됐으면 
+                if (status === kakao.maps.services.Status.OK) {
+
+                    var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+                    console.log("coords", coords);
+
+
+                    var imageSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png', // 마커이미지의 주소입니다    
+                        imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
+                        imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+                    // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+                    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
+                        markerPosition = new kakao.maps.LatLng(37.54699, 127.09598); // 마커가 표시될 위치입니다
+
+                    // 마커를 생성합니다
+                    var marker = new kakao.maps.Marker({
+                        position: markerPosition,
+                        image: markerImage // 마커이미지 설정 
+                    });
+
+                    // 마커가 지도 위에 표시되도록 설정합니다
+                    marker.setMap(map);
+
+                    // 커스텀 오버레이에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                    var content = '<div class="customoverlay">' +
+                        '  <a href="https://map.kakao.com/link/map/11394059" target="_blank">' +
+                        '    <span class="title">학원</span>' +
+                        '  </a>' +
+                        '</div>';
+
+                    // 커스텀 오버레이가 표시될 위치입니다 
+                    var position = coords;
+
+                    // 커스텀 오버레이를 생성합니다
+                    var customOverlay = new kakao.maps.CustomOverlay({
+                        map: map,
+                        position: position,
+                        content: content,
+                        yAnchor: 1
+                    });
+
+                    /*// 결과값으로 받은 위치를 마커로 표시합니다
+                    var marker = new kakao.maps.Marker({
+                        map: map,
+                        position: coords
+                    });
+
+                    // 인포윈도우로 장소에 대한 설명을 표시합니다
+                    var infowindow = new kakao.maps.InfoWindow({
+                        content: '<div style="width:150px;text-align:center;padding:6px 0;">아아아아아</div>'
+                    });
+                    infowindow.open(map, marker);
+
+                    // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다*/
+                    map.setCenter(coords);
+
+                }
+            });
+        </script>
     </div>
+
+
+
+
 
     <aside id="popup">
         <div class="contents">
             팝업내용
-        </div>
-        <div class="btns">
-            <button class="btnOneday">오늘 하루 이창을 열지 않기</button>
-            <button class="btnClose">
-                닫기
-            </button>
-        </div>
+            <div class="btns">
+                <button class="btnOneday">오늘 하루 이창을 열지 않기</button>
+                <button class="btnClose">
+                    닫기
+                </button>
+            </div>
     </aside>
+
+
+
+
+
+
+
     <footer id="footer">
         <div class="utilMenu">
             <ul>
