--- a/4day/hitop/html/index_fulldown.html
+++ b/4day/hitop/html/index_fulldown.html
@@ -13,18 +13,14 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/swiper.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/layout_fulldown.css">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/splitting.css">
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/swiper.min.js"></script>
     <script src="../js/js.cookie.min.js"></script>
-    <script src="../js/splitting.js"></script>
     <script src="../js/greensock/gsap.min.js"></script>
-    <script src="../js/main.js" defer></script>
-
-
+    <script src="../js/main_fulldown.js" defer></script>
+    -->
 </head>
 
 <body>
@@ -100,31 +96,6 @@
     </header>
     <!-- header end -->
     <div id="mainVisual">
-        <div class="mask">
-            <ul class="visualList swiper-wrapper">
-                <li class="visual01 swiper-slide">
-                    <div class="imgMask">
-                        <div class="img">
-                            모래사장 배경
-                        </div>
-                    </div>
-                </li>
-                <li class="visual02 swiper-slide">
-                    <div class="imgMask">
-                        <div class="img">
-                            눈덮힌 산 배경
-                        </div>
-                    </div>
-                </li>
-                <li class="visual03 swiper-slide">
-                    <div class="imgMask">
-                        <div class="img">
-                            안개 가득한 숲속 배경
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
         <!-- <div class="txtMotion">
             <ul class="swiper-wrapper">
                 <li class="swiper-slide">
@@ -157,20 +128,28 @@
                 </li>
             </ul>
         </div> -->
-        <div class="slogan">
-            <p class="main" data-splitting>
-                Lorem ipsum dolor sit amet.
-            </p>
-            <p class="sub" data-splitting>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Eligendi, quia rerum eum maxime facere recusandae exercitationem <br>
-                inventore aliquam quis laudantium?
-            </p>
+        <div class="mask">
+            <ul class="visualList swiper-wrapper">
+                <li class="visual01 swiper-slide">
+                    <div class="img">
+                        모래사장 배경
+                    </div>
+                </li>
+                <li class="visual02 swiper-slide">
+                    <div class="img">
+                        눈덮힌 산 배경
+                    </div>
+                </li>
+                <li class="visual03 swiper-slide">
+                    <div class="img">
+                        안개 가득한 숲속 배경
+                    </div>
+                </li>
+            </ul>
         </div>
         <button class="btnPrev"><img src="../images/main/btn_prev.png" alt="이전 슬라이드 보기"></button>
         <button class="btnNext"><img src="../images/main/btn_next.png" alt="다음 슬라이드 보기"></button>
-        <div class="pagination">
-            <!--갯수만큼 나오게하기-->
+        <div class="pager">
             <span class="btns">
 
             </span>
@@ -272,8 +251,6 @@
                 <h2>HITOP NEWS</h2>
                 <p>도시경관사업의 시장을 선도하는 하이탑의 다양한 소식을 전해드립니다.</p>
             </div>
-
-
             <div class="mask">
                 <ul class="swiper-wrapper">
                     <li class="swiper-slide">
@@ -369,53 +346,6 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div class="sample">
-                <ul class="swiper-wrapper">
-                    <li class="swiper-slide">
-                        <p class="main">01</p>
-                        <p class="sub">
-                            ipsum dolor sit amet consectetur adipisicing elit. Similique, facilis saepe harum quia
-                            consequatur corrupti eveniet ad et fugit praesentium quas eligendi nesciunt rem ab porro
-                            minus eum perferendis alias!
-                        </p>
-                    </li>
-                    <li class="swiper-wrapper">
-                        <p class="main">02</p>
-                        <p class="sub">
-                            dolor sit amet consectetur adipisicing elit. Similique, facilis saepe harum quia
-                            consequatur corrupti eveniet ad et fugit praesentium quas eligendi nesciunt rem ab porro
-                            minus eum perferendis alias!
-                        </p>
-                    </li>
-                    <li class="swiper-wrapper">
-                        <p class="main">03</p>
-                        <p class="sub">
-                            sit amet consectetur adipisicing elit. Similique, facilis saepe harum quia
-                            consequatur corrupti eveniet ad et fugit praesentium quas eligendi nesciunt rem ab porro
-                            minus eum perferendis alias!
-                        </p>
-                    </li>
-                    <li class="swiper-wrapper">
-                        <p class="main">04</p>
-                        <p class="sub">
-                            consectetur adipisicing elit. Similique, facilis saepe harum quia
-                            consequatur corrupti eveniet ad et fugit praesentium quas eligendi nesciunt rem ab porro
-                            minus eum perferendis alias!
-                        </p>
-                    </li>
-                    <li class="swiper-wrapper">
-                        <p class="main">05</p>
-                        <p class="sub">
-                            adipisicing elit. Similique, facilis saepe harum quia
-                            consequatur corrupti eveniet ad et fugit praesentium quas eligendi nesciunt rem ab porro
-                            minus eum perferendis alias!
-                        </p>
-                    </li>
-
-                </ul>
-            </div>
-            <div class="pagination">
             </div>
             <button class="btnPrev">
                 <i class="xi-angle-left-thin"></i>
